--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ events:
 
 tasks:
   activity:
-    id_role_for_activity_track: 952280483759292456
+    id_role_for_activity_track: 
     id_text_channel_for_report: 954793683323064401
 
 cogs:
